mongo docker-compose, gateway cors, jackson access properties

--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -4,3 +4,8 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
 spring.cloud.gateway.discovery.locator.enabled=true
 spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+
+
+spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedOrigins=*
+spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedHeaders=*
+spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedMethods=*
