--- a/pom.xml
+++ b/pom.xml
@@ -1,14 +1,17 @@
-<project>
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+        xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+  <modelVersion>4.0.0</modelVersion>
 
   <groupId>com.z</groupId>
-  <artifactId>parent</artifactId>
+  <artifactId>microservices-speak</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   
   <modules>
+    <module>hello-service</module>
+    <module>client-service</module>
     <module>eureka-server</module>
     <module>gateway</module>
-    <module>user-service</module>
-    <module>reservation-service</module>
   </modules>
-  
+
 </project>
