--- a/gateway/src/main/resources/application.properties
+++ b/gateway/src/main/resources/application.properties
@@ -2,10 +2,11 @@ spring.application.name=gateway-service
 server.port=9000
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 eureka.instance.preferIpAddress=true
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+eureka.client.registry-fetch-interval-seconds=10
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 
 
-spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedOrigins=*
-spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedHeaders=*
-spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedMethods=*
+#spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedOrigins=*
+#spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedHeaders=*
+#spring.cloud.gateway.globalcors.cors-configurations.'[/**]'.allowedMethods=*
